--- a/index.html
+++ b/index.html
@@ -24,23 +24,18 @@
     <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
-            </a>
-            <input type="checkbox" id="nav-toggle" name="nav-toggle">
-            <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
-            <nav>
-                <ul id="menu">
-                    <li>
-                        <a href="" class="active">Home</a>
-                    </li>
-                    <li>
-                        <a href="">Gallery</a>
-                    </li>
-                    <li>
-                        <a href="">Sign up</a>
-                    </li>
-                </ul>
-            </nav>
         </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
+        <nav>
+            <ul id="menu">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!-- Main content -->
@@ -51,7 +46,40 @@
                 <h3>Dublin Docklands & Phoenix Park</h3>
             </div>
         </section>
+        <section id="reasons">
+            <h2>Why love running with us?</h2>
+            <div id="benefits">
+                <div id="benefits-physical">
+                    <div>
+                        <h3>Feel healthy <i class="fa-solid fa-heart-pulse"></i></h3>
+                        <hr>
+                        <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular
+                            health. Plus, it burns calories and can build strength.</p>
+                    </div>
+                    <div>
+                        <h3>Feel strong <i class="fa-solid fa-dumbbell"></i></h3>
+                        <hr>
+                        <p>Running strengthens your heart by pumping blood more effectively through your body.</p>
+                    </div>
+                </div>
+                <div id="benefits-mental">
+                    <div>
+                        <h3>Feel free <i class="fa-brands fa-fly"></i></h3>
+                        <hr>
+                        <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins
+                            make you more energetic, more awake and, yes, happier.</p>
+                    </div>
+                    <div>
+                        <h3>Get social <i class="fa-solid fa-globe"></i></h3>
+                        <hr>
+                        <p>When we run with others, we can run farther and faster more easily. Social running can pull
+                            you out of a running funk or low mood, and inspire you to try new events.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
 
     <!-- Footer -->
     <footer>
